--- a/cookie/loginForm.html
+++ b/cookie/loginForm.html
@@ -1,4 +1,4 @@
-<form action="" method="post">
+<form action="<?php echo $_SERVER['PHP_SELF'];?>" method="post">
     Ваше имя:<br>
     <input name="name" placeholder="Логин"><br>
     Ваш пароль:<br>
