--- a/session/logout.html
+++ b/session/logout.html
@@ -1,4 +1,4 @@
-<form action="<?php echo $_SERVER['PHP_SELF'];?>" method="post">
+<form action="" method="post">
     <br>
     <input type="submit" name="exit" value="Выход">
     <input type="submit" name="calc" value="Калькулятор">
