--- a/inc/logout.html
+++ b/inc/logout.html
@@ -1,4 +1,4 @@
-<form action="" method="post">
+<form action="<?= $_SERVER['REQUEST_URI']?" method="post">
     <br>
     <input type="submit" name="exit" value="Выход">
     <input type="submit" name="calc" value="Калькулятор">
