--- a/inc/loginForm.html
+++ b/inc/loginForm.html
@@ -1,4 +1,4 @@
-<form action="<?= $_SERVER['REQUEST_URI']?" method="post">
+<form action="<?= $_SERVER['REQUEST_URI']?>" method="post">
     Ваше имя:<br>
     <input name="name" placeholder="Логин"><br>
     Ваш пароль:<br>
