--- a/inc/regform.html
+++ b/inc/regform.html
@@ -1,4 +1,4 @@
-<form action="<?= $_SERVER['REQUEST_URI']?" method="post">
+<form action="<?= $_SERVER['REQUEST_URI']?>" method="post">
     Ваше имя:<br>
     <input name="reg_name" placeholder="Логин"><br>
     Ваш email:<br>
