--- a/diary/inc/form/loginForm.html
+++ b/diary/inc/form/loginForm.html
@@ -4,9 +4,9 @@
 </head>
 <div class="mypanel">
     <form action="" method="post">
-        Ваше имя:<br>
+        Логин:<br>
         <input size="25" name="name" placeholder="Логин"><br>
-        Ваш пароль:<br>
+        Пароль:<br>
         <input size="25" type='password' name="pswd" placeholder="Пароль"><br><br>
         <input type="submit" value="Вход">
     </form>
