--- a/diary/inc/form/registred.html
+++ b/diary/inc/form/registred.html
@@ -4,12 +4,18 @@
 </head>
 <div class="mypanel">
     <form action="" method="post">
-        Введите ваше имя:<br>
-        <input size="25" name="reg_name" placeholder="Логин"><br>
-        Введите Ваш пароль:<br>
-        <input size="25" type='password' name="reg_pswd" placeholder="Пароль"><br>
-        Введите Ваш email:<br>
-        <input size="25" type='email' name="reg_email" placeholder="email"><br><br>
+        Логин:<br>
+        <input size="25" name="reg_login" placeholder="Логин"><br>
+        Еmail:<br>
+        <input size="25" type='email' name="reg_email" placeholder="email"><br>
+        Имя:<br>
+        <input size="25" type='name' name="reg_name" placeholder="Имя"><br>
+        Фамилия:<br>
+        <input size="25" type='surname' name="reg_surname" placeholder="Фамилия"><br>
+        Пароль:<br>
+        <input size="25" type='password' name="reg_pswd1" placeholder="Пароль"><br>
+        Повторите пароль:<br>
+        <input size="25" type='password' name="reg_pswd2" placeholder="Повторите пароль"><br><br>
         <input size="25" type="submit" name="to_reg" value="Регистрация">
     </form>
 </div>
