--- a/diary/inc/form/registred.html
+++ b/diary/inc/form/registred.html
@@ -5,17 +5,25 @@
 <div class="mypanel">
     <form action="" method="post">
         Логин:<br>
-        <input size="25" name="reg_login" placeholder="Логин"><br>
+        <input size="25" name="reg_login" placeholder="Логин" value="admin" required><br>
         Еmail:<br>
-        <input size="25" type='email' name="reg_email" placeholder="email"><br>
+        <input size="25" type='email' name="reg_email" placeholder="email" value="admin@admin.com" required><br>
         Имя:<br>
-        <input size="25" type='name' name="reg_name" placeholder="Имя"><br>
+        <input size="25" type='name' name="reg_name" placeholder="Имя" value="Kpro" required><br>
         Фамилия:<br>
-        <input size="25" type='surname' name="reg_surname" placeholder="Фамилия"><br>
+        <input size="25" type='surname' name="reg_surname" placeholder="Фамилия" value="KGB" required><br>
         Пароль:<br>
-        <input size="25" type='password' name="reg_pswd1" placeholder="Пароль"><br>
+        <input size="25" type='password' name="reg_pswd1" placeholder="Пароль" value="123321" required><br>
         Повторите пароль:<br>
-        <input size="25" type='password' name="reg_pswd2" placeholder="Повторите пароль"><br><br>
+        <input size="25" type='password' name="reg_pswd2" placeholder="Повторите пароль"  value="123321" required><br><br>
+        <select name="reg_class" required>
+            <option selected  disabled>Выберите класс</option>
+            <option  value="teachet">Учитель</option>
+            <option value="1V">1-В класс</option>
+            <option value="5A">5-А класс</option>
+            <option value="7B">7-Б класс</option>
+        </select>
+        <br><br>
         <input size="25" type="submit" name="to_reg" value="Регистрация">
     </form>
 </div>
