--- a/diary/inc/form/registred.html
+++ b/diary/inc/form/registred.html
@@ -16,7 +16,7 @@
         <input size="25" type='password' name="reg_pswd1" placeholder="Пароль" value="123321" required><br>
         Повторите пароль:<br>
         <input size="25" type='password' name="reg_pswd2" placeholder="Повторите пароль"  value="123321" required><br><br>
-        <select name="reg_class" required>
+        <select name="reg_class" required="required">
             <option selected  disabled>Выберите класс</option>
             <option  value="teachet">Учитель</option>
             <option value="1V">1-В класс</option>
