--- a/diary/inc/form/loginForm.html
+++ b/diary/inc/form/loginForm.html
@@ -5,9 +5,9 @@
 <div class="mypanel">
     <form action="" method="post">
         Логин:<br>
-        <input size="25" name="name" placeholder="Логин"><br>
+        <input size="25" name="lname" placeholder="Логин"><br>
         Пароль:<br>
-        <input size="25" type='password' name="pswd" placeholder="Пароль"><br><br>
+        <input size="25" type='password' name="lpswd" placeholder="Пароль"><br><br>
         <input type="submit" value="Вход">
     </form>
 </div>
