--- a/diary/inc/form/loginForm.html
+++ b/diary/inc/form/loginForm.html
@@ -1,17 +1,25 @@
+<html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="inc/style.css" type="text/css" rel="stylesheet">
 </head>
-<div class="mypanel">
-    <form action="" method="post">
-        Логин:<br>
-        <input size="25" name="lname" placeholder="Логин"><br>
-        Пароль:<br>
-        <input size="25" type='password' name="lpswd" placeholder="Пароль"><br><br>
-        <input type="submit" value="Вход">
-    </form>
+<body>
+<div id="content">
+    <div class="mypanel">
+        <form action="" method="post">
+            Логин:<br>
+            <input size="25" name="lname" placeholder="Логин" value="admin"><br>
+            Пароль:<br>
+            <input size="25" type='password' name="lpswd" placeholder="Пароль" value="123321"><br><br>
+            <input type="submit" value="Вход">
+        </form>
 </div>
-
+</div>
+            <div id="footer">
+                &copy; Тест сайт, 2014 - <?= date('Y')?>
+            </div>
+</body>
+</html>
 
 
 
