--- a/diary/inc/form/registred.html
+++ b/diary/inc/form/registred.html
@@ -1,7 +1,9 @@
+<html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="inc/style.css" type="text/css" rel="stylesheet">
 </head>
+<body>
 <div class="mypanel">
     <form action="" method="post">
         Логин:<br>
@@ -27,3 +29,5 @@
         <input size="25" type="submit" name="to_reg" value="Регистрация">
     </form>
 </div>
+</body>
+</html>
