--- a/diary/inc/form/loginForm.html
+++ b/diary/inc/form/loginForm.html
@@ -17,6 +17,8 @@
 </div>
             <div id="footer">
                 &copy; Тест сайт, 2014 - <?= date('Y')?>
+                <br>
+                <a href="inc/installDb.inc.php">InstallDB</a>
             </div>
 </body>
 </html>
