--- a/diary/inc/form/loginForm.html
+++ b/diary/inc/form/loginForm.html
@@ -18,7 +18,7 @@
             <div id="footer">
                 &copy; Тест сайт, 2014 - <?= date('Y')?>
                 <br>
-                <a href="inc/installDb.inc.php">InstallDB</a>
+                <a href="/inc/installDb.inc.php">InstallDB</a>
             </div>
 </body>
 </html>
