--- a/diary/inc/form/loginForm.html
+++ b/diary/inc/form/loginForm.html
@@ -19,6 +19,7 @@
                 &copy; Тест сайт, 2014 - <?= date('Y')?>
                 <br>
                 <a href="/inc/installDb.inc.php">InstallDB</a>
+                <a href="/inc/registred.inc.php">Add users</a>
             </div>
 </body>
 </html>
