--- a/diary/inc/form/start.html
+++ b/diary/inc/form/start.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="inc/style.css">
 </head>
 <body>
+<div id="dashed-line"></div>
 <div id="content">
     <h1><?= $header?></h1>
     <?php include 'inc/routing.inc.php'; ?>
@@ -13,6 +14,7 @@
     <h2>Навигация по сайту</h2>
     <ul>
         <li><a href="index.php?id=registred">Добавить ученика</a></li>
+        <li><a href="index.php?id=table">Таблица учеников</a></li>
         <li><a href="index.php?id=install">Установка БД</a></li>
         <li><a href="index.php?id=logout">Выход</a></li>
     </ul>
