--- a/diary/inc/form/registred.html
+++ b/diary/inc/form/registred.html
@@ -4,19 +4,19 @@
     <link href="inc/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<div class="mypanel">
+<div>
     <form action="" method="post">
-        Логин:<br>
+        <label>Логин: </label><br>
         <input size="25" name="reg_login" placeholder="Логин" value="admin" required><br>
-        Еmail:<br>
+        <label>Еmail: </label><br>
         <input size="25" type='email' name="reg_email" placeholder="email" value="admin@admin.com" required><br>
-        Имя:<br>
+        <label>Имя: </label><br>
         <input size="25" type='name' name="reg_name" placeholder="Имя" value="Kpro" required><br>
-        Фамилия:<br>
+        <label>Фамилия: </label><br>
         <input size="25" type='surname' name="reg_surname" placeholder="Фамилия" value="KGB" required><br>
-        Пароль:<br>
+        <label>Пароль: </label><br>
         <input size="25" type='password' name="reg_pswd1" placeholder="Пароль" value="123321" required><br>
-        Повторите пароль:<br>
+        <label>Повторите пароль: </label><br>
         <input size="25" type='password' name="reg_pswd2" placeholder="Повторите пароль"  value="123321" required><br><br>
         <select name="reg_class" required="required">
             <option selected  disabled>Выберите класс</option>
