update class DB+etc

--- a/diary/inc/form/loginForm.html
+++ b/diary/inc/form/loginForm.html
@@ -16,7 +16,7 @@
 </div>
 </div>
             <div id="footer">
-                &copy; Kpro-dev, 2014 - <?= date('Y')?>
+                &copy; Kpro-dev, <?= date('Y')?>
                 <br />
                 <a href="/inc/installDb.inc.php">InstallDB</a>
             </div>
