--- a/diary/inc/form/start.html
+++ b/diary/inc/form/start.html
@@ -20,7 +20,7 @@
     </ul>
 </div>
 <div id="footer">
-    &copy; Kpro-dev, 2014 - <?= date('Y')?>
+    &copy; Kpro-dev, <?= date('Y')?>
 </div>
 </body>
 </html>
