--- a/diary/inc/form/loginForm.html
+++ b/diary/inc/form/loginForm.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta charset="utf-8"/>
     <link href="inc/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div id="content">
     <div id="mypanel">
-        <form action="" method="post">
+        <form action="<?php echo $_SERVER["PHP_SELF"];?>" method="post">
             <label for="login">Логин:</label><br>
-            <input size="25" id="login" name="lname" placeholder="Логин" value="admin"><br>
+            <input size="25" id="login" type="text" name="lname" placeholder="Логин" value="admin"><br>
             <label for="pass">Пароль:</label><br>
             <input size="25" id="pass" type='password' name="lpswd" placeholder="Пароль" value="123321"><br><br>
             <input type="submit" value="Вход">
