--- a/diary/inc/form/registred.html
+++ b/diary/inc/form/registred.html
@@ -1,4 +1,4 @@
-<form action="" method="post">
+<form action="<?php echo $_SERVER["PHP_SELF"];?>" method="post">
     <label>Логин: </label><br>
     <input size="25" name="reg_login" placeholder="Логин" value="admin" required><br>
     <label>Еmail: </label><br>
