--- a/diary/inc/form/start.html
+++ b/diary/inc/form/start.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title><?= $title?></title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="inc/style.css">
 </head>
 <body>
