--- a/js/index.html
+++ b/js/index.html
@@ -1,8 +1,21 @@
-<script language = "javascript" charset="UTF-8">
-    function hello() {
-        alert("Привет");
-        alert("Привет");
-        alert("Привет");
-    }
-    hello();
+<html>
+<head>
+    <meta charset="utf-8" />
+<script language = "javascript">
+
+
+
+
+
+    document.write(Math.log(Math.E * Math.E));
+
+
+
+
+
+
 </script>
+</head>
+<body>
+</body>
+</html>
