--- a/js2/module-2/image.html
+++ b/js2/module-2/image.html
@@ -4,8 +4,29 @@
 <meta charset="utf-8">
 <title>Использование изображений</title>
 <script type="text/javascript">
-	function changeImage(){}	
-	function loopImage(){}	
+	function changeImage(){
+		var i = document.images[0];
+		i.src= "i/green.png"
+	}
+	var flag = false;
+	function loopImage(){
+		var i = document.images[0];
+		if(flag) {
+			i.src= "i/red.png"
+		} else {
+			i.src= "i/green.png"
+		}
+		flag = !flag;
+	}
+	function resizeImage() {
+		var i = document.sochi;
+		var normalWidth = 640;
+		if(i.width < normalWidth) {
+			i.width *= 1.1;
+			i.height *= 1.1;
+			setTimeout("resizeImage()", 50);
+		}
+	}
 </script>
 </head>
 <body>
@@ -15,6 +36,9 @@
 <img src="i/red.png" name="square" width="200" height="200">
 <br>
 <a href="javascript:changeImage()">Сменить картинку</a><br>
-<a href="javascript:loopImage()">Менять картинки циклически</a>
+<a href="javascript:loopImage()">Менять картинки циклически</a><br>
+<a href="javascript:resizeImage()"><img src="i/sochi.jpg" name="sochi" width="64" height="47"></a>
+<br>
+
 </body>
 </html>
