--- a/js2/labs/module-1/lab-1.html
+++ b/js2/labs/module-1/lab-1.html
@@ -21,6 +21,9 @@ function winOpen() {
 				окно должно быть открыто строго по середине экрана
 		2. Передайте фокус созданному окну
 	*/
+	win = window.open("/", name, "width=300, height=200");
+	win.document.write("Привет, мир!")
+	win.focus;
 }
 
 function docWrite() {
