--- a/js2/module-2/image.html
+++ b/js2/module-2/image.html
@@ -24,7 +24,7 @@
 		if(i.width < normalWidth) {
 			i.width *= 1.1;
 			i.height *= 1.1;
-			setTimeout("resizeImage()", 50);
+			setTimeout(resizeImage, 50);
 		}
 	}
 </script>
