--- a/js2/module-3/attributes.html
+++ b/js2/module-3/attributes.html
@@ -6,7 +6,16 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<script type="text/javascript">
 		function changeAttribute(){
-		
+			var allP = document.getElementsByTagName('p');
+			var p;
+			for (var i=0; i<allP.length; i++) {
+				p = allP[i];
+				if(p.getAttribute("align") == "left") {
+					p.setAttribute("align", "right");
+				} else {
+					p.setAttribute("align", "left");
+				}
+			}
 		}
 	</script>
 </head>
