--- a/js2/labs/module-3/lab-3-2.html
+++ b/js2/labs/module-3/lab-3-2.html
@@ -12,6 +12,17 @@ var row = 10;
 
 function createDOM() {
 	/* Создайте в элементе div таблицу с помощью методов DOM */
+	var d = document.getElementById("d");
+	d.innerHTML = "";
+	var t = d.appendChild(document.createElement("table"));
+	var tb = t.appendChild(document.createElement("tbody"));
+	for(var i=1; i<=row; i++) {
+		var tr = tb.appendChild(document.createElement("tr"));
+		for(var j=1; j<=cell; j++) {
+			var td = tr.appendChild(document.createElement("td"));
+			td.appendChild(document.createTextNode(i*j));
+		}
+	}
 }
 </script>
 </head>
