--- a/js2/labs/module-4/lab-4-2.html
+++ b/js2/labs/module-4/lab-4-2.html
@@ -5,7 +5,7 @@
 	<title>Пример простого меню</title>
 	<meta charset="utf-8">
 	<style type="text/css">
-		html, body { margin: 0px; padding; 0px }
+		html, body { margin: 0px; padding: 0px; }
 		h1 { margin-top: 30px }
 		#menu a, .subMenu a {
 			display: block;
@@ -57,20 +57,25 @@
 			1. Оптимизируйте код
 			2. Сделайте так, чтобы выпадающие элементы div не исчезали сразу.	
 		*/
-		
+		var hideTimers = {};
+		function setVisibility(objID, visible) {
+			var obj = document.getElementById(objID);
+			obj.style.visibility = (visible) ? "visible" : "";
+		}
 		/*
 		**	Функция показывает меню с указанным ID
 		*/
 		function showMenu(objID){
-			var obj = document.getElementById(objID);
-			obj.style.visibility = "visible";
+			setVisibility(objID, true);
+			clearTimeout(hideTimers[objID]);
 		}
 		/*
 		**	Функция убирает меню с указанным ID
 		*/
 		function hideMenu(objID){
-			var obj = document.getElementById(objID);
-			obj.style.visibility = "";
+			//setVisibility(objID, false);
+			var cmd = "setVisibility('"+objID+"', false)";
+			hideTimers[objID] = setTimeout(cmd, 300);
 		}		
 	</script>
 </head>
