--- a/jquery/labs/lab-2-1.html
+++ b/jquery/labs/lab-2-1.html
@@ -7,16 +7,32 @@
   <link rel="stylesheet" href="../css/style.css" type="text/css" />  
   <script src="../lib/jquery.js" type="text/javascript"></script>
 	<script>
+$(function(){
 	/** ЗАДАНИЕ 1
 		- В <div id="news"> скрыть все элементы <span> с классом "hidden"
 		- При нажатии левой кнопки мышки на элемент <p> скрытые элементы <span> должен показываться.
 			При повторном нажатии - прятаться.
 	*/
+	$('div#news span.hidden').hide();
+
+	$('div#news p').on('click', function(){
+		$(this).children('span').toggle();
+	});
+
+
 	/** ЗАДАНИЕ 2
 		- В таблице с id="courses" при наведении курсора мышки на элемент <tr> должны:
 			- меняться цвет фона данной строки таблицы
 			- текст в колонке "Комплекс" выделяться полужирным
 	*/
+	$('#courses tr').on('mouseenter', function(){
+		$(this).children('td').eq(3).css('font-weight', 'bold').end().css('background-color', 'silver');
+	});
+	$('#courses tr').on('mouseleave', function(){
+		$(this).children('td').eq(3).css('font-weight', '').end().css('background-color', '');
+	});
+
+
 	/** ЗАДАНИЕ 3 (Дополнительно для тех, кто осилил предыдущие задания)
 		- Спрятать <div id="form">
 		- В элемент <h2>Ваш комментарий</h2> добавить атрибут "title" со значением 
@@ -36,6 +52,28 @@
 		- Разрешить ввод только символов [8, 9, 13, 16, 17, 32, 37, 39, 46, 65-122, 189]
 			При вводе недопустимого символа вывести alert('Недопустимый символ') и удалить этот символ
 	*/
+	$('#form').hide();
+	$('#comment h2').attr('title', 'Нажмите для заполнения данных');
+	$('#comment h2').on('click', function(){
+		$('#form').toggle();
+	});
+
+
+	$('#form input[type=text]').attr('placeholder', 'Представьтесь');
+	$('#form textarea').attr('placeholder', 'Ваш комментарий');
+
+
+	$('#form').on('keyup', function(e){
+		console.log(e.target);
+		if(e.target.val() == ''){
+			e.target.addClass('emptyField');
+		}else{
+			e.target.removeClass('emptyField');
+		}
+	});
+
+
+});
 	</script>
 	<style>.emptyField{background-color:red}</style>
 </head>
