--- a/jquery/labs/lab-3-2.html
+++ b/jquery/labs/lab-3-2.html
@@ -5,6 +5,21 @@
 	<title>Лабораторная работа 3-2</title>
 	<script src="../lib/jquery.js" type="text/javascript"></script>
 	<script>
+		$(function(){
+
+			$.fn.inOut = function(speed, fn){
+				return $(this).animate(
+						{'opacity': 'toggle', 'height': 'toggle'},
+						speed || 500, function() {
+							$.isFunction(fn) && fn.call(this);
+						}
+				);
+			};
+
+			$('button').on('click', function(){
+				$('div.container').inOut(500);
+			});
+		});
 	/** ЗАДАНИЕ 1
 		- Создать свой метод inOut, который эмулирует функционал методов slideToggle и fadeToggle
 			Сами методы slideToggle и fadeToggle в коде не использовать!
@@ -26,7 +41,7 @@
 
 	.container {
 		width: 400px;
-		background: yellow;
+		background: silver;
 		position: relative;
 		overflow: hidden;
 		padding: 1em;
