--- a/jquery/module-1/demo-1-1.html
+++ b/jquery/module-1/demo-1-1.html
@@ -6,13 +6,32 @@
 		<link rel="stylesheet" href="../css/style.css" type="text/css" />  
 		<script src="../lib/jquery.js" type="text/javascript"></script>
 		<script>
+			$(function(){
+				//$('ul li:odd').addClass("mylist");
+				//$('ul li').toggleClass("mylist");
+				/*if ($('li:last').is('.mylist')) {
+					console.log('Yes');
+				}*/
+
+				var lis = $('ul.mylist')    //выбираем ul c классом mylist
+						.children('li')     //Получаем всех детей ul
+						.eq(1)              //Выбираем второй элемент
+						.css('color', 'red')//Применяем style
+						.html('<span>Second item</span>');  //Делаем InnerHTML
+				console.log(lis);
+			});
 		</script>
 		<style>
+			.mylist{
+				color: green;
+				background-color: gold;
+				font-size: 12px;
+			}
 		</style>
 	</head>
 	<body>
 		<div id='box'>
-			<ul>
+			<ul class="mylist">
 				<li>Первый пункт</li>
 				<li>Второй пункт</li>
 				<li>Третий пункт</li>
