--- a/jquery/module-2/demo-2-2.html
+++ b/jquery/module-2/demo-2-2.html
@@ -6,6 +6,10 @@
 		<script src="../lib/jquery.js" type="text/javascript"></script>
 		<script>
 			$(function(){
+				$("<h2></h2>", {
+					text: "Строка",
+					class: "myClass"
+				}).prependTo('article');
 			});
 		</script>
 		<style>
