--- a/ajax/labs/lab-1/index.html
+++ b/ajax/labs/lab-1/index.html
@@ -9,20 +9,40 @@
 		**	Задание 1. Создание объекта XmlHttpRequest
 		**		
 	-->
+	<script type="text/javascript" src="../../demo/xmlhttprequest.js"></script>
 	<script type="text/javascript">
 		/*
 		**
 		**	Задание 2. Выборка книги 
 		**
 		*/
-
+		function getBookByNumber(bookId) {
+			var request = getXmlHttpRequest();
+			request.onreadystatechange = function() {
+				if (request.readyState != 4) {
+					return false;
+				}
+				if (request.status != 200) {
+					alert("Что-то случилось:\t" + request.statusText);
+					return;
+				}
+				var div = document.getElementById("divResult");
+				div.firstChild.nodeValue = request.responseText;
+			};
+			request.open("GET", "getbooktxt.php?num=" + bookId, true);
+			request.send(null);
+		}
 
 		
 		/*
 		**
 		**	Задание 3. Обработчик кнопки
 		**
-		*/ 
+		*/
+		function showBook() {
+			var num = document.getElementById("txtNum");
+			getBookByNumber(num.value);
+		}
 
 	</script>
 </head>
